<resources>
    <string name="app_name">ScentMeasure</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_sensor_measurement">SensorMeasurementActivity</string>
    <string name="action_settings">Settings</string>
    <string name="sensorSettings">Sensor settings...</string>
    <string name="temperatureMeasurements">Temperature sensor measurements</string>
    <string name="moistureMeasurements">Moisture sensor measurements</string>
    <string name="optionsMeasurements">moisture sensor measurements</string>
    <string name="sensorMeasurementFrequence">Updating...</string>
    <string name="livingLabDanube">Danube Delta</string>
    <string name="synching">Synching</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="loginLbl">Login</string>
    <string name="termsOfUseLogin"> By logging in you agree to the terms of use of SCENT</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_web">WebActivity</string>
    <string name="registerLink">Don\'t have an account? Click here to register!</string>
    <string name="forgotPassword">Forgot your password? Click here!</string>
    <string name="gpsCoordinates">GPS coordinates here</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="today">TODAY</string>
    <string name="update">Updated at</string>
    <string name="synchonisation">SYNCHONISATION</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="upload_measurements">Upload measurements</string>
    <string name="wifi_synch">Wifi synch</string>
    <string name="measurements_uploaded_to_scent_cloud">Measurements uploaded to SCENT cloud</string>
    <string name="units">UNITS</string>
    <string name="upload_only_when_wifi_is_available">Upload only when wifi is available</string>
    <string name="metric">Metric</string>
    <string name="account">ACCOUNT</string>
    <string name="logout">Logout</string>
    <string name="stay_logged_in">Stay logged in</string>
    <string name="uploadedData">Uploaded data</string>
    <string name="storedData">Stored data in device</string>
    <string name="start">START</string>
    <string name="stopButton">STOP</string>
    <string name="waiting">Waiting</string>
    <string name="language">LANGUAGE</string>
    <string name="english">English</string>
    <string name="greek">Ελληνικά</string>
    <string name="rom_n">Română</string>
    <string name="temperature">Temperature</string>
    <string name="moisture">Moisture</string>
    <string name="options">Options</string>
    <string name="deviceAlias">Enter device allias here</string>
    <string name="actionBar">Select sensor</string>
    <string name="save">SAVE</string>
    <string name="alias">Alias:</string>
    <string name="international">International</string>


</resources>
