<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/scentMuted"
    tools:context="eu.iccs.scent.scentmeasure.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/measure_logo"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:textColorHint="@color/scentActionBar"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:background="@color/white"
                    android:textColor="@color/counter_text_bg"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/counter_text_bg"
                    android:background="@color/white"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:background="@color/scentActionBar"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView android:layout_width="match_parent"
                android:id="@+id/registerView"
                android:layout_height="wrap_content"
                android:textColor="@color/scentext"
                android:textSize="14dp" android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:onClick="onClick"
                android:clickable="true"
                android:text="@string/registerLink"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp">
            </TextView>

            <TextView
                android:id="@+id/forgotPassView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/forgotPassword"
                android:textColor="@color/scentext"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>



    </ScrollView>


</LinearLayout>
